diesel_cli/tests/snapshots/tests__help_snapshots__postgres.snap
---
source: diesel_cli/tests/help_snapshots.rs
expression: res.stdout()
---
diesel 
 Version: 2.3.14
 Supported Backends: postgres
